# simple-ci-demo

./: CMakeLists.txt  calculatar.h  calculator.cpp  test_calculator.cpp
.github/workflows/: ci.yml
